@@ -1,0 +1,5 @@
+<?php
+return array (
+  'template' => 'default',
+  'baseControllerClass' => 'Controller',
+);
